--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <section>
         <img src="img/randing_intro.png" alt="" />
       </section>
+      <section>
+        <img src="img/m_randing_intro.png" alt="" />
+      </section>
     </div>
   </body>
 </html>
