--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <section>
         <img src="img/m_randing_intro.png" alt="" />
       </section>
+      <section>
+        <img src="img/m_randing_story.png" alt="" />
+      </section>
     </div>
   </body>
 </html>
