--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="wrap">
       <section>
+        <img src="img/m_randing_intro_test.png" alt="" />
+      </section>
+      <section>
         <img src="img/randing_intro.png" alt="" />
       </section>
       <section>
