--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <img src="img/m_randing_intro_test.png" alt="" />
       </section>
       <section>
+        <img src="img/list.png" alt="" />
+      </section>
+      <section>
         <img src="img/randing_intro.png" alt="" />
       </section>
       <section>
