리스트 추가

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="wrap">
       <section>
-        <img src="img/m_randing_intro_test.png" alt="" />
+        <img src="img/m_randing_intro_test.png" alt="랜딩 인트로" />
       </section>
       <section>
-        <img src="img/m_randing_story.png" alt="" />
+        <img src="img/m_randing_story.png" alt="보람스토리" />
       </section>
       <section>
-        <img src="img/list.png" alt="" />
+        <img src="img/m_randing_intro_test.png" alt="장례식장리스트" />
       </section>
     </div>
   </body>
