리스트 이미지 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/m_randing_story.png" alt="보람스토리" />
       </section>
       <section>
-        <img src="img/m_randing_intro_test.png" alt="장례식장리스트" />
+        <img src="img/randing_list.png" alt="장례식장리스트" />
       </section>
     </div>
   </body>
