7/17 랜딩 이미지 추가 종료

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <section>
         <img src="img/randing_list.png" alt="장례식장리스트" />
       </section>
+      <section>
+        <img src="img/randing_boram.png" alt="보람복지몰" />
+      </section>
     </div>
   </body>
 </html>
