--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="wrap">
       <section>
-        <img src="img/m_randing_intro_test.png" alt="랜딩 인트로" />
+        <img src="img/m_randing_intro_01.png" alt="랜딩 인트로" />
+      </section>
+      <section>
+        <img src="img/m_randing_intro_02.png" alt="랜딩 인트로" />
       </section>
       <section>
         <img src="img/m_randing_story.png" alt="보람스토리" />
