4번째 이미지 수정 후 업로드

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   <body>
     <div class="wrap">
       <section>
-        <img src="img/m_randing_intro_01.png" alt="랜딩 인트로" />
+        <img src="img/m_randing_intro_01.png" alt="랜딩 인트로 01" />
       </section>
       <section>
-        <img src="img/m_randing_intro_02.png" alt="랜딩 인트로" />
+        <img src="img/m_randing_intro_02.png" alt="랜딩 인트로 02" />
+      </section>
+      <section>
+        <img src="img/m_randing_intro_03.png" alt="랜딩 인트로 03" />
+      </section>
+      <section>
+        <img src="img/m_randing_intro_04.png" alt="랜딩 인트로 04" />
       </section>
       <section>
         <img src="img/m_randing_story.png" alt="보람스토리" />
