이미지 추가

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <img src="img/m_randing_intro_04.png" alt="랜딩 인트로 04" />
       </section>
       <section>
+        <img src="img/m_randing_intro_05.png" alt="랜딩 인트로 04" />
+      </section>
+      <section>
         <img src="img/m_randing_story.png" alt="보람스토리" />
       </section>
       <section>
