--- a/index.html
+++ b/index.html
@@ -3,35 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" />
-    <title>랜딩테스트페이지</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>천안축산농협 회원 가입페이지</title>
+    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="wrap">
-      <section>
-        <img src="img/m_randing_intro_01.png" alt="랜딩 인트로 01" />
-      </section>
-      <section>
-        <img src="img/m_randing_intro_02.png" alt="랜딩 인트로 02" />
-      </section>
-      <section>
-        <img src="img/m_randing_intro_03.png" alt="랜딩 인트로 03" />
-      </section>
-      <section>
-        <img src="img/m_randing_intro_04.png" alt="랜딩 인트로 04" />
-      </section>
-      <section>
-        <img src="img/m_randing_intro_05.png" alt="랜딩 인트로 04" />
-      </section>
-      <section>
-        <img src="img/m_randing_story.png" alt="보람스토리" />
-      </section>
-      <section>
-        <img src="img/randing_list.png" alt="장례식장리스트" />
-      </section>
-      <section>
-        <img src="img/randing_boram.png" alt="보람복지몰" />
-      </section>
+    <div id="wrap">
+      <div class="intro">
+        <div id="inner">
+          <span class="left_icon">
+            <img src="img/left_icon.png" alt="" />
+          </span>
+          <div class="intro_title">
+            <span>
+              <p>천안축산농협 회원에게만 제공되는</p>
+            </span>
+            <div>
+              <h1>프리미엄</h1>
+              <h1>할인혜택</h1>
+            </div>
+            <div class="scroll_event">
+              <div class="scroll_arrow">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <p>아래로 스크롤 해주세요.</p>
+            </div>
+          </div>
+          <span class="right_icon">
+            <img src="img/right_icon.png" alt="" />
+          </span>
+        </div>
+      </div>
+      <div class="contaniner">
+        <div id="inner">
+          <div class="point_list">
+            <ul>
+              <li>
+                <span
+                  ><div class="t_color">영결식장</div>
+                  이용 무료</span
+                >
+                <p>
+                  고인을 기리며 마지막 작별 인사를 나누는 순간, 보람 전용 품격 있는 영결식장을 무료로 이용 하실 수
+                  있습니다
+                </p>
+              </li>
+              <li>
+                <span
+                  ><div class="t_color">모든 장례식장</div>
+                  10% 할인</span
+                >
+                <p>품격 있는 장례식을 준비하면서도 합리적인 비용으로 이용하실 수 있도록 보람에서 도와드립니다.</p>
+              </li>
+              <li>
+                <span
+                  ><div class="t_color">영결식장</div>
+                  이용 무료</span
+                >
+                <p>
+                  고인을 기리며 마지막 작별 인사를 나누는 순간, 보람 전용 품격 있는 영결식장을 무료로 이용 하실 수
+                  있습니다
+                </p>
+              </li>
+              <li>
+                <span
+                  ><div class="t_color">영결식장</div>
+                  이용 무료</span
+                >
+                <p>
+                  고인을 기리며 마지막 작별 인사를 나누는 순간, 보람 전용 품격 있는 영결식장을 무료로 이용 하실 수
+                  있습니다
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
+
+  <script src="js/common.js"></script>
 </html>
