--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul>
               <li>
                 <span
-                  ><div class="t_color">영결식장</div>
+                  ><div class="t_color">영결ㄴ식장</div>
                   이용 무료</span
                 >
                 <p>
