--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>천안축산농협 회원 가입페이지</title>
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/common.scss" />
+    <link rel="stylesheet" href="/css/style.scss" />
   </head>
   <body>
     <div id="wrap">
