--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>천안축산농협 회원 가입페이지</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/common.scss" />
-    <link rel="stylesheet" href="css/style.scss" />
   </head>
   <body>
     <div id="wrap">
@@ -40,11 +38,11 @@
       </div>
       <div class="contaniner">
         <div id="inner">
-          <div class="point_list">
+          <section class="point_list">
             <ul>
               <li>
                 <span
-                  ><div class="t_color">영결ㄴ식장</div>
+                  ><div class="t_color">영결식장</div>
                   이용 무료</span
                 >
                 <p>
@@ -55,32 +53,61 @@
               <li>
                 <span
                   ><div class="t_color">모든 장례식장</div>
-                  10% 할인</span
+                  10%할인</span
                 >
                 <p>품격 있는 장례식을 준비하면서도 합리적인 비용으로 이용하실 수 있도록 보람에서 도와드립니다.</p>
               </li>
               <li>
                 <span
-                  ><div class="t_color">영결식장</div>
-                  이용 무료</span
+                  ><div class="t_color">3단 근조화환</div>
+                  제공</span
                 >
                 <p>
-                  고인을 기리며 마지막 작별 인사를 나누는 순간, 보람 전용 품격 있는 영결식장을 무료로 이용 하실 수
-                  있습니다
+                  보람의 작은 배려가 여러분의 진심을 더 잘 전달할 수 있도록 도우며, 함께 슬픔을 나누고, 아름다운 이별을
+                  준비하세요.
                 </p>
               </li>
               <li>
                 <span
-                  ><div class="t_color">영결식장</div>
-                  이용 무료</span
+                  ><div class="t_color">관내 운구 시</div>
+                  무료</span
                 >
                 <p>
-                  고인을 기리며 마지막 작별 인사를 나누는 순간, 보람 전용 품격 있는 영결식장을 무료로 이용 하실 수
-                  있습니다
+                  장례 준비에 대한 걱정을 줄이시고, 고인을 존경과 예의를 다해 모실 수 있도록 저희가 최선을 다하겠습니다
                 </p>
               </li>
             </ul>
-          </div>
+          </section>
+          <section class="limousine">
+            <div class="section_text_wrap">
+              <div class="keyword_bage">
+                <p>PREMIUM</p>
+              </div>
+              <div class="section_title">
+                <p>BORAM</p>
+                <p>LMOUSINE</p>
+              </div>
+              <div class="section_desc">
+                <p>프리미엄 고객서비스</p>
+                <p class="t_color">국내 최초 장의 리무진 서비스</p>
+              </div>
+            </div>
+            <div class="section_img_box">
+              <img src="img/limousine.jpg" alt="리무진 이미지" />
+              <div class="section_img_desc">
+                <span>
+                  <p>프리미엄 고객서비스</p>
+                  <p>캐딜락 에스컬레이드 리무진</p>
+                </span>
+                <span>
+                  <p>
+                    고인을 위한 최상의 예우와 유가족의 편의를 위해, 보람에서는 국내 최초로 프리미엄 장의 리무진 서비스를
+                    도입했으며, 고급스러운 리무진 차량을 통해 고인의 마지막 여정을 품격 있게 모십니다.
+                  </p>
+                </span>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
     </div>
