--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </span>
           <div class="intro_title">
             <span>
-              <p>천안축산농협 회원에게만 제공되는</p>
+              <p>천안축산농협 회원에게만 제s공되는</p>
             </span>
             <div>
               <h1>프리미엄</h1>
