--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" />
   <title>보람카네기 임직원 전용페이지</title>
-  <link rel="stylesheet" href="css/common.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/common.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
@@ -39,7 +39,7 @@
         </span>
       </div>
     </div>
-    <div class="contaniner">
+    <div class="container">
       <div id="inner">
         <section class="point_list">
           <ul>
