--- a/seoul.html
+++ b/seoul.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" />
@@ -39,7 +38,7 @@
         </span>
       </div>
     </div>
-    <div class="contaniner">
+    <div class="container">
       <div id="inner">
         <section class="point_list">
           <ul>
@@ -544,11 +543,11 @@
                   <span class="about_desc">
                     <div class="about_desc_sub_title">
                       <h4>보람상조 31년 전통의 노하우</h4>
-                      <p>
-                        보람상조는 지난 31년간 고객의 소중한 순간을 함께하며,
-                        장례 서비스 분야에서 최고의 전문성과 신뢰를 쌓아 왔습니다.
-                      </p>
                     </div>
+                    <p>
+                      보람상조는 지난 31년간 고객의 소중한 순간을 함께하며,
+                      장례 서비스 분야에서 최고의 전문성과 신뢰를 쌓아 왔습니다.
+                    </p>
                   </span>
                 </div>
                 <div class="boram">
@@ -558,11 +557,11 @@
                       <h4>
                         신속·안심·편리한 고품격 서비스
                       </h4>
-                      <p>
-                        24시간 긴급 상황실, 100% 직영 행사팀 운영 등
-                        신속·안심· 편리한 고품격 서비스로 고인의 품격을 높여 드립니다.
-                      </p>
                     </div>
+                    <p>
+                      24시간 긴급 상황실, 100% 직영 행사팀 운영 등
+                      신속·안심· 편리한 고품격 서비스로 고인의 품격을 높여 드립니다.
+                    </p>
                   </span>
                 </div>
               </div>
