--- a/index.html
+++ b/index.html
@@ -462,216 +462,6 @@
         </div>
       </section>
       <div id="inner">
-        <section class="story">
-          <div class="section_text_wrap">
-            <div class="keyword_bage">
-              <p>STORY</p>
-            </div>
-            <div class="section_title">
-              <p>대한민국 장례서비스 전문기업</p>
-              <p>보람그룹</p>
-            </div>
-          </div>
-          <div class="story_container">
-            <div class="story_img_list">
-              <div class="story_service mb-12">
-                <img src="img/service.jpg" alt="전문인력서비스">
-                <span class="story_desc">
-                  전문인력서비스
-                </span>
-              </div>
-              <div class="story_funeral mb-12">
-                <img src="img/funeral.jpg" alt="장례용품">
-                <span class="story_desc">
-                  격식을 갖춘 장례용품
-                </span>
-              </div>
-              <div class="story_limousine">
-                <img src="img/limousine.jpg" alt="리무진">
-                <span class="story_desc">
-                  격식을 갖춘 장례용품
-                </span>
-              </div>
-            </div>
-            <div class="about_section">
-              <div class="section_title">
-                <p>보람 그룹의 기업장례는</p>
-                <p>무엇이 다를까요?</p>
-              </div>
-              <div class="about_list">
-                <div class="boram">
-                  <img src="img/boram.jpg" alt="보람상조 장례이미지">
-                  <span class="about_desc">
-                    <div class="about_desc_title">
-                      <p>대한민국 대표 상조기업</p>
-                      <h4>보람상조</h4>
-                    </div>
-                    <p>
-                      <span class="t_color">선수금 1조 3천 630억원, 자산 1조 1천 870억원, 누적 회원 수 260만 </span>
-                      회원을 보유한 대한민국을 대표하는
-                      상조회사로서, 여러분의 소중한
-                      순간을 함께하는 든든한
-                      동반자가 되기 위해 최선을 다하고 있습니다.
-                    </p>
-                  </span>
-                </div>
-                <div class="boram">
-                  <img src="img/boram_02.jpg" alt="보람상조 보람상조 31년 전통의 노하우">
-                  <span class="about_desc">
-                    <div class="about_desc_sub_title">
-                      <h4>보람상조 31년 전통의 노하우</h4>
-                    </div>
-                    <p>
-                      보람상조는 지난 31년간 고객의 소중한 순간을 함께하며,
-                      장례 서비스 분야에서 최고의 전문성과 신뢰를 쌓아 왔습니다.
-                    </p>
-                  </span>
-                </div>
-                <div class="boram">
-                  <img src="img/boram_03.jpg" alt="보람상조 신속·안심·편리한 고품격 서비스 ">
-                  <span class="about_desc">
-                    <div class="about_desc_sub_title">
-                      <h4>
-                        신속·안심·편리한 고품격 서비스
-                      </h4>
-                    </div>
-                    <p>
-                      24시간 긴급 상황실, 100% 직영 행사팀 운영 등
-                      신속·안심· 편리한 고품격 서비스로 고인의 품격을 높여 드립니다.
-                    </p>
-                  </span>
-                </div>
-              </div>
-              <ul class="history">
-                <li>
-                  <h4>선수금, 자산총액 더블 1조 돌파</h4>
-                  <p><span class="t_color">선수금 1조3천630억원, 자산총액 1조 1천 870억원</span><br/>(2021년 12월 기준)</p>
-                  <div class="sub_company">
-                    <span>상조계열사</span>
-                    <p>보람상조개발, 보람상조라이프, 보람상조피플, 보람상조애니콜,
-                      보람상조실로암, 보람상조리더스, 국방상조회</p>
-                  </div>
-                </li>
-                <li>
-                  <h4>국내 최다 260만명 회원 보유</h4>
-                  <p><span class="t_color">누적 가입 고객 수 260만명</span> (2021년 12월 기준)</p>
-                  <div class="sub_company">
-                    <span>상조계열사</span>
-                    <p>보람상조개발, 보람상조라이프, 보람상조피플, 보람상조애니콜,
-                      보람상조실로암, 보람상조리더스, 국방상조회</p>
-                  </div>
-                </li>
-                <li>
-                  <h4>국내 최다 행사 진행</h4>
-                  <p><span class="t_color">누적 행사 수 25만여 건 진행 </span>(2021년 12월 기준)</p>
-                  <div class="sub_company">
-                    <span>상조계열사</span>
-                    <p>보람상조개발, 보람상조라이프, 보람상조피플, 보람상조애니콜,
-                      보람상조실로암, 보람상조리더스, 국방상조회</p>
-                  </div>
-                </li>
-                <li>
-                  <h4>국내 최대 영업망과 행사팀 보유</h4>
-                  <p><span class="t_color">전국 영업망 및 직영 행사 팀 100여개 지점</span></p>
-                  <div class="sub_company">
-                    <p>본사 직영 고객만족센터 운영 전국</p>
-                    <p>24시간 긴급 상황실 운영</p>
-                  </div>
-                </li>
-                <li>
-                  <h4>국내 최초 장의리무진 자체 개발</h4>
-                  <p><span class="t_color">최고급 의전차량 152대</span></p>
-                  <div class="sub_company car_list">
-                    <span>보유차량</span>
-                    <ul>
-                      <li>VVIP 캐딜락 에스컬레이터 장의리무진 : 22대
-                      </li>
-                      <li>VIP 메르세데스 벤츠 장의리무진 : 1대
-                      </li>
-                      <li>VIP 승용리무진 : 3대</li>
-                      <li>링컨 콘티넨탈 장의리무진 : 9대</li>
-                      <li>고인 이송차 : 89대</li>
-                      <li>버스 : 28대</li>
-                    </ul>
-                  </div>
-                </li>
-                <li>
-                  <h4>국내 최초 장례관리사 런칭 및 운영</h4>
-                  <p><span class="t_color">보람상조그룹 전문 인재 5,000여명</span></p>
-                  <div class="sub_company car_list">
-                    <span>전문인력</span>
-                    <ul>
-                      <li>설계사 : 3,000명
-                      </li>
-                      <li>장례지도사 : 100명
-                      </li>
-                      <li>고객관리 : 100명</li>
-                      <li>행사복지사 : 100명</li>
-                      <li>행정 : 100명</li>
-                      <li>의전관리사 : 100명</li>
-                    </ul>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section class="premium">
-          <div class="section_text_wrap">
-            <div class="keyword_bage">
-              <p>POINT</p>
-            </div>
-            <div class="section_title">
-              <p>보람그룹 기업 회원에게만</p>
-              <p>제공되는 프리미엄 혜택</p>
-            </div>
-          </div>
-          <div class="premium_item_list">
-            <ul>
-              <li>
-                <img src="img/item_img_01.jpg" alt="장례식장">
-                <div class="item_desc">
-                  <h4>전국 직영 장례식장 이용 할인</h4>
-                  <p>의정부, 인천, 김해, 창원, 부산 등 전국 직영 장례식장
-                    이용 시 할인 혜택을 제공합니다.</p>
-                </div>
-              </li>
-              <li>
-                <img src="img/item_img_02.jpg" alt="보람복지몰">
-                <div class="item_desc">
-                  <h4>온라인 보람몰 이용 가능</h4>
-                  <p>가전, 호텔, 펜션, 골프 기차 여행 등 을 최대 80% 할인 된 금액으로 이용 및 구매가 가능합니다.</p>
-                </div>
-              </li>
-              <li>
-                <img src="img/limousine.jpg" ait="장의 리무진">
-                <div class="item_desc">
-                  <h4>고품격 장례 서비스 최고급 장의 리무진</h4>
-                  <p>캐딜락 에스컬레이드, 벤츠, 링컨 등 VIP를 위한
-                    대형 리무진 의전 제공</p>
-                </div>
-              </li>
-              <li>
-                <img src="img/item_img_04.jpg" alt="장례 무료상담">
-                <div class="item_desc">
-                  <h4>사전 장례상담 무료 컨설팅</h4>
-                  <p>장례 준비로 고민하시는 기업 회원 모두에게 장례 컨설팅을
-                    무료로 제공 해 드립니다.</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
-      <section class="ad_banner text-center">
-        <div id="inner">
-            <div class="ad_desc">
-              <p>장례행사 및 긴급문의</p>
-              <p>1577-1009</p>
-            </div>
-        </div>
-      </section>
-      <div id="inner">
         <section class="funeral_list">
           <div class="section_text_wrap">
             <div class="keyword_bage">
@@ -686,22 +476,6 @@
               <p><span class="t_color">제휴 할인 서비스를 제공</span>합니다.
               </p>
             </div>
-          </div>
-          <div class="list_tab_button">
-            <ul>
-              <li class="list_tab_btn" data-tab="1">보람인천장례식장</li>
-              <li class="list_tab_btn" data-tab="2">보람의정부장례식장</li>
-              <li class="list_tab_btn" data-tab="3">보람여주장례식장</li>
-              <li class="list_tab_btn" data-tab="4">천안국빈장례식장</li>
-              <li class="list_tab_btn" data-tab="5">동래봉생병원장례식장</li>
-              <li class="list_tab_btn" data-tab="6">양산부산대학교병원장례식장</li>
-              <li class="list_tab_btn" data-tab="7">창원경상대학교병원장례식장</li>
-              <li class="list_tab_btn" data-tab="8">보람세민에스병원장례식장</li>
-              <li class="list_tab_btn" data-tab="9">대동병원장례식장</li>
-              <li class="list_tab_btn" data-tab="10">새천년장례식장</li>
-              <li class="list_tab_btn" data-tab="11">보람여수장례식장</li>
-              <li></li>
-            </ul>
           </div>
           <div class="item_list">
             <div class="item" id="tab-1">
@@ -956,6 +730,21 @@
                 </a>
               </div>
             </div>
+          </div>
+          <div class="list_tab_button">
+            <ul>
+              <li class="list_tab_btn" data-tab="1">보람인천장례식장</li>
+              <li class="list_tab_btn" data-tab="2">보람의정부장례식장</li>
+              <li class="list_tab_btn" data-tab="3">보람여주장례식장</li>
+              <li class="list_tab_btn" data-tab="4">천안국빈장례식장</li>
+              <li class="list_tab_btn" data-tab="5">동래봉생병원<br/>장례식장</li>
+              <li class="list_tab_btn" data-tab="6">양산부산대학교병원<br/>장례식장</li>
+              <li class="list_tab_btn" data-tab="7">창원경상대학교병원<br/>장례식장</li>
+              <li class="list_tab_btn" data-tab="8">보람세민에스병원<br/>장례식장</li>
+              <li class="list_tab_btn" data-tab="9">대동병원장례식장</li>
+              <li class="list_tab_btn" data-tab="10">새천년장례식장</li>
+              <li class="list_tab_btn" data-tab="11">보람여수장례식장</li>
+            </ul>
           </div>
         </section>
       </div>
