복지몰 삭제

--- a/index.html
+++ b/index.html
@@ -756,7 +756,8 @@
             </div>
         </div>
       </section>
-      <div id="inner">
+      <!--복지몰 display:none-->
+      <!-- <div id="inner">
         <section class="boram_shop">
           <div class="section_text_wrap">
             <div class="keyword_bage">
@@ -982,7 +983,7 @@
               <p>1899-0522</p>
             </div>
         </div>
-      </section>
+      </section> -->
     </div>
   </div>
 </body>
