--- a/kiwoom.html
+++ b/kiwoom.html
@@ -1350,7 +1350,7 @@
               <div class="item" id="tab-10">
                 <ul>
                   <li><img src="img/saecheonnyeon_01.jpg" alt="새천년 장례식장 이미지 첫번째" /></li>
-                  <li><img src="img/saecheonnyeon_02.jpg" alt="새천년 장례식장 이미지 두번째" /></li>
+                  <li><img src="img/saecheonnyeon_02.png" alt="새천년 장례식장 이미지 두번째" /></li>
                   <li><img src="img/saecheonnyeon_03.jpg" alt="새천년 장례식장 이미지 세번째" /></li>
                 </ul>
                 <div class="item_desc">
